[package]
name = "tmaze"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
rand = "0.8.5"
crossterm = "0.23.0"
masof = {git = "https://github.com/MineFuf/masof.git"}
thiserror = "1.0.30"
substring = "1.4.5"