[package]
name = "cmaze"
version = "0.8.0"
edition = "2021"
description = "Core of tmaze game"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/ur-fault/tmaze"

[dependencies]
rand = "^0.8.5"
thiserror = "1.0.64"
pausable_clock = "^1.0.1"
rayon = "^1.10.0"
hashbrown  = "0.14"
log = "0.4"
serde = { version = "^1", features = ["derive"] }
rand_xoshiro = "^0.6.0"
