[package]
name = "compress"
version = "0.1.1"
edition = "2021"
description = "Internal tool for compressing assets for tmaze, won't probably be uploaded to crates.io"
authors = ["ur-fault <minefuf.fufik@gmail.com>"]
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
mp3lame-encoder = { version = "0.1.5", features = ["std"] }
walkdir = "2.5.0"
wav = "1.0.1"
dunce = "1.0.5"
anyhow = "1.0.89"
