[package]
name = "tlua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.7", features = ["async", "luajit", "serialize", "vendored", "send"]}
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
