[package]
name = "tmaze"
version = "1.12.4"
edition = "2021"
authors = ["ur-fault"]
description = "Simple multiplatform maze solving game for terminal written entirely in Rust"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/ur-fault/tmaze"

[dependencies]
cmaze = { path = "../cmaze", version = "0.6.1" }
fyodor = "^0.4.0" # not so much stable yet

colored = "^2"
crossterm = { version = "^0.27.0", features = ["serde"] }
substring = "^1.4.5"
serde = { version = "^1.0.136", features = ["derive"] }
pausable_clock = "^1.0.1"
dirs = "^5.0.0"
ron = "0.8.0"
clap = { version = "4.0.29", features = ["derive"] }
pad = "0.1.6"
rand = "^0.8.1"
derivative = "2.2.0"
unicode-width = "0.1.10"
tap = "1.0.1"
crates_io_api = { version = "0.8.1", optional = true }
semver = { version = "1.0.17", optional = true }
tokio = { version = "1.27.0", optional = true }
thiserror = "1.0.48"
humantime = "2.1.0"
chrono = { version = "0.4.30", features = ["serde"] }

[features]
default = ["hashbrown"]
hashbrown = ["cmaze/hashbrown"]
updates = ["dep:crates_io_api", "dep:semver", "dep:tokio"]
