[package]
name = "tmaze"
version = "1.16.0"
edition = "2021"
authors = ["ur-fault"]
description = "Simple multiplatform maze solving game for terminal written entirely in Rust"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/ur-fault/tmaze"
exclude = [
    "assets/raw",
]

[dependencies]
better-panic = "0.3.0"
cmaze = { path = "../cmaze", version = "0.8.0" }
crossterm = { version = "^0.28.1", features = ["serde"] }
substring = "^1.4.5"
serde = { version = "^1", features = ["derive"] }
pausable_clock = "^1.0.1"
dirs = "^5.0.1"
clap = { version = "4.5.20", features = ["derive"] }
pad = "0.1.6"
rand = "^0.8.5"
derivative = "2.2.0"
unicode-width = "0.1.14"
thiserror = "2"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4"
smallvec = { version = "1.13.2", features = ["const_generics"] }

# optional 
crates_io_api = { version = "0.11.0", optional = true, default-features = false, features = ["rustls"] }
semver = { version = "1.0.23", optional = true }
tokio = { version = "1.40.0", optional = true, features = ["rt", "rt-multi-thread"] }
rodio = { version = "0.18.1", optional = true, default-features = false, features = ["wav", "mp3"] }
hashbrown = { version = "0.14", features = ["serde"] }
toml = "0.8"
json5 = "0.4.1"
serde_json = "1.0.137"

[build-dependencies]
flacenc = "0.3.1"
wav = "1.0.1"
walkdir = "2.5.0"
dunce = "1.0.5"
mp3lame-encoder = "0.1.5"

[features]
default = ["updates", "sound"]
updates = ["dep:crates_io_api", "dep:semver", "dep:tokio"]
sound = ["dep:rodio"]
local_paths = []

